--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "xcap"
-version = "0.3.0"
+version = "0.2.2"
 edition = "2021"
 description = "XCap is a cross-platform screen capture library written in Rust. It supports Linux (X11, Wayland), MacOS, and Windows. XCap supports screenshot and video recording (WIP)."
 license = "Apache-2.0"
@@ -18,23 +18,23 @@ image = ["image/default"]
 [dependencies]
 image = { version = "0.25", default-features = false, features = ["png"] }
 log = "0.4"
-scopeguard = "1.2"
+scopeguard = "1.2.0"
 thiserror = "2.0"
 
 [target.'cfg(target_os = "macos")'.dependencies]
-objc2 = "0.6"
-objc2-app-kit = "0.3"
-objc2-core-foundation = "0.3"
-objc2-core-graphics = "0.3"
-objc2-foundation = "0.3"
+core-foundation = "0.10"
+core-graphics = "0.24"
+objc2-app-kit = { version = "0.2.2", features = [
+    "libc",
+    "NSWorkspace",
+    "NSRunningApplication",
+] }
 
 [target.'cfg(target_os = "windows")'.dependencies]
-widestring = "1.1"
-windows = { version = "0.59", features = [
+windows = { version = "0.58", features = [
     "Win32_Foundation",
     "Win32_Graphics_Gdi",
     "Win32_Graphics_Dwm",
-    "Win32_Devices_Display",
     "Win32_System_LibraryLoader",
     "Win32_UI_WindowsAndMessaging",
     "Win32_Storage_Xps",
